добавил проверку существования файла